tests/NormalTests/paczka1/small_fuzzy/59120717.err
Error in line 1: jcJXh A29 67,8
Error in line 9: bxVHv S798 14,9
